NXP-9739: Fix retina display icons on Safari based browser

--- a/nuxeo-web-mobile/nuxeo-web-mobile-dm/src/main/resources/skin/resources/css/nuxeo-web-mobile.css
+++ b/nuxeo-web-mobile/nuxeo-web-mobile-dm/src/main/resources/skin/resources/css/nuxeo-web-mobile.css
@@ -11,7 +11,8 @@
 
 /* Footer */
 .icon-footer {
-  background: url('../icons/footer_home_off.png') no-repeat scroll 50% center / 32px auto transparent;
+  background-size: 32px;
+  background: transparent no-repeat center;
   display: inline-block;
   height: 32px;
   width: 32px }
@@ -64,7 +65,9 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
     .documentInfo .modificationDate { color: #aaa; font-size: 85%; margin-bottom: .2em; padding-left: 1.4em }
 
 .icon-docview {
-  background: url('../icons/preview.png') no-repeat scroll 50% center / 32px auto transparent;
+  background-size: 32px;
+  background: transparent no-repeat center;
+
   display: inline-block;
   height: 32px;
   width: 32px }
@@ -75,18 +78,16 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
 .icons-docview-like { background-image: url('../icons/like.png') }
 .icons-docview-liked { background-image: url('../icons/liked.png') }
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
-only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
-only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
-only screen and (        min-device-pixel-ratio: 2)      and (min-width: 320px),
-only screen and (                min-resolution: 192dpi) and (min-width: 320px),
-only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
+@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
+only screen and (-moz-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min-device-pixel-ratio: 1.5) {
     .icons-docview-preview { background-image: url('../icons/preview@2x.png') }
     .icons-docview-comments { background-image: url('../icons/comments@2x.png') }
     .icons-docview-annotations { background-image: url('../icons/annotations@2x.png') }
     .icons-docview-like { background-image: url('../icons/like@2x.png') }
     .icons-docview-liked { background-image: url('../icons/liked@2x.png') }
+}
 
 /* Preview */
 .preview { background: #fff !important; border: medium none; height: 150em; overflow: visible; width: 100% }
